# cube-eater

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: app.h  cube.h  game_object.h  sphere.h  tools_mod.h
src/: app.cpp  cube.cpp  game_object.cpp  main.cpp  sphere.cpp  tools_mod.cpp
